fix overflowing nav and news tests

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -243,7 +243,7 @@ body {
 
   // larger font sizes cause weird overflow errors on some names
   @media screen and (max-width: 991px) {
-    font-size: 0.9em;
+    font-size: 0.7em;
   }
 
   .navbtn {
